[workspace]

[package]
name = "jec"
authors = ["Josh Chase <josh@jec.pw>"]
version = "0.2.0"
description = "My collection of general-purpose crates"
license = "MIT/Apache-2.0"
keywords = ["util"]
repository = "https://github.com/Pursuit92/jec-rs"
documentation = "https://docs.rs/jec"
homepage = "https://docs.rs/jec"

[dependencies]
jec-rccow = { path = "./rccow", version = "0.1" }
